//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxTokenPublish {
	TxBase           TxBase            = 1;
    string           Token_name        = 2;  //名称
    string           Token_symbol      = 3;  //单位
    uint64           Token_supply      = 4;  //发行总量
    uint64           Token_Vout_total  = 5;  //输出交易数量
    repeated Vout    Token_Vout        = 6;  //交易输出
}

